# PrinciplesOfCompilerDesign-SHU

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/exp01-recognize-identifier/: case01.pl0  case03.pl0
data/exp02-lexical-analysis/: case01.pl0  case04.pl0
include/: PL0.hpp
include/PL0/Core/: Action.hpp  LL1Parser.hpp  Lexer.hpp  Optimizer.hpp  Parser.hpp  (+8 more)
scripts/: build-windows.ps1  test-linuxX64-exp01.sh  test-linuxX64-exp02.sh  test-linuxX64-exp03.sh  test-linuxX64-exp04.sh  test-linuxX64-exp06.sh  test-windowsX64-exp01.ps1  test-windowsX64-exp02.ps1  test-windowsX64-exp03.ps1  test-windowsX64-exp04.ps1  test-windowsX64-exp06.ps1
src/: CMakeLists.txt
src/PL0/Core/: Action.cpp  ArgParser.cpp  LL1Parser.cpp  Lexer.cpp  Optimizer.cpp  Parser.cpp  RecursiveDescentParser.cpp  Rule.cpp  RuleAnalyzer.cpp  Scanner.cpp  SemanticLL1Parser.cpp  Symbol.cpp  Syntax.cpp  Token.cpp
src/PL0/Utils/: ArgParser.cpp  Scanner.cpp
tests/: CMakeLists.txt
tests/Experiments/: exp01-recognize-identifier_main.cpp  exp02-lexical-analysis_main.cpp
tests/data/exp01-recognize-identifier/: case01.pl0  case02.pl0  case04.pl0  case05.pl0
tests/data/exp02-analyze-lexical/: case02.pl0  case03.pl0  case04.pl0  case05.pl0
tests/data/exp03-analyze-syntax/: case02.pl0  case03.pl0  case04.pl0  case05.pl0  case06.pl0  case07.pl0  case08.pl0  case09.pl0  case10.pl0
tests/data/exp04-analyze-semantics/: case05.pl0  case08.pl0  case10.pl0
tests/data/exp06-optimize-code/: case01.plq  case02.plq  case03.plq  case04.plq  case05.plq
tests/experiments/: exp01-recognize-identifier_main.cpp  exp02-analyze-lexical_main.cpp  exp03-analyze-syntax_main.cpp  exp04-analyze-semantics_main.cpp  exp06-optimize-code_main.cpp
(+7 files in other folders)
